--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,21 @@
   "short_name": "Metaplex NFT Marketplace",
   "display": "standalone",
   "start_url": "./",
-  "theme_color": "#002140",
-  "background_color": "#001529",
+  "theme_color": "#85d3c2",
+  "background_color": "#85d3c2",
   "icons": [
     {
-      "src": "/favicon-16x16.png",
+      "src": "/saad-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/favicon-32x32.png",
+      "src": "/saad-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/favicon-96x96.png",
+      "src": "/saad-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     }
